I should have checked all the links

--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
 	"contributors": [
 		{
 			"name": "Australian Government - Digital Transformation Agency",
-			"email": "designsystem@designsystem.org",
-			"url": "https://www.designsystem.org/"
+			"email": "hi@designsystemau.org",
+			"url": "https://www.designsystemau.org/"
 		}
 	],
 	"license": "MIT",
