--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - main
+      - fix-deploy
 
 jobs:
   build-and-deploy:
@@ -19,7 +20,7 @@ jobs:
         run: |
           npm install
           npm run prebuild
-          npm run build:site
+          npm run build
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.4
