--- a/content/_data.yml
+++ b/content/_data.yml
@@ -2,46 +2,46 @@
 # THE `pancake` and `auds` FIELDS WILL BE OVERWRITTEN
 
 pancake:
-  downloads: 82963
+  downloads: 262
   modules:
-    '@gov.au/pancake': 20622
-    '@gov.au/pancake-js': 12624
-    '@gov.au/pancake-json': 17496
-    '@gov.au/pancake-react': 13950
-    '@gov.au/pancake-sass': 17551
-    '@gov.au/syrup': 720
+    '@gold.au/pancake': 60
+    '@gold.au/pancake-js': 20
+    '@gold.au/pancake-json': 59
+    '@gold.au/pancake-react': 38
+    '@gold.au/pancake-sass': 56
+    '@gold.au/syrup': 29
   stars: 94
 auds:
-  downloads: 270537
+  downloads: 276988
   modules:
-    '@gold.au/accordion': 8857
-    '@gold.au/animate': 12652
-    '@gold.au/body': 11678
-    '@gold.au/breadcrumbs': 9232
-    '@gold.au/buttons': 11461
-    '@gold.au/callout': 8504
-    '@gold.au/card': 10227
-    '@gold.au/control-input': 10873
-    '@gold.au/core': 16735
-    '@gold.au/cta-link': 9991
-    '@gold.au/direction-links': 8052
-    '@gold.au/footer': 10702
-    '@gold.au/form': 6876
-    '@gold.au/grid-12': 8659
-    '@gold.au/header': 10169
-    '@gold.au/headings': 7885
-    '@gold.au/inpage-nav': 7111
-    '@gold.au/keyword-list': 6569
-    '@gold.au/link-list': 11111
-    '@gold.au/main-nav': 8142
-    '@gold.au/page-alerts': 9378
-    '@gold.au/progress-indicator': 6814
-    '@gold.au/responsive-media': 7309
-    '@gold.au/searchbox': 5027
-    '@gold.au/select': 8546
-    '@gold.au/side-nav': 6799
-    '@gold.au/skip-link': 7651
-    '@gold.au/table': 5484
-    '@gold.au/tags': 6939
-    '@gold.au/text-inputs': 11104
-  stars: 727
+    '@gov.au/accordion': 9094
+    '@gov.au/animate': 12445
+    '@gov.au/body': 11807
+    '@gov.au/breadcrumbs': 9550
+    '@gov.au/buttons': 11773
+    '@gov.au/callout': 8637
+    '@gov.au/card': 10600
+    '@gov.au/control-input': 11194
+    '@gov.au/core': 17144
+    '@gov.au/cta-link': 10176
+    '@gov.au/direction-links': 8249
+    '@gov.au/footer': 10875
+    '@gov.au/form': 7192
+    '@gov.au/grid-12': 8808
+    '@gov.au/header': 10429
+    '@gov.au/headings': 8084
+    '@gov.au/inpage-nav': 7443
+    '@gov.au/keyword-list': 6876
+    '@gov.au/link-list': 11264
+    '@gov.au/main-nav': 8451
+    '@gov.au/page-alerts': 9471
+    '@gov.au/progress-indicator': 6965
+    '@gov.au/responsive-media': 7484
+    '@gov.au/searchbox': 5117
+    '@gov.au/select': 8679
+    '@gov.au/side-nav': 7045
+    '@gov.au/skip-link': 7907
+    '@gov.au/table': 5600
+    '@gov.au/tags': 7221
+    '@gov.au/text-inputs': 11408
+  stars: 729
