--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
 		"@gold.au/link-list": "latest",
 		"@gold.au/main-nav": "latest",
 		"@gold.au/page-alerts": "latest",
-		"@gov.au/pancake-sass": "^2.3.7",
 		"@gold.au/progress-indicator": "latest",
 		"@gold.au/responsive-media": "latest",
 		"@gold.au/searchbox": "latest",
@@ -99,6 +98,11 @@
 			"doctype": "<!DOCTYPE html><!--[if lt IE 8]><html class=\"no-js lt-ie8 lt-ie9\" lang=\"en\"><![endif]--><!--[if IE 8]><html class=\"no-js lt-ie9 ie8\" lang=\"en\"><![endif]--><!--[if IE 9 ]><html class=\"no-js ie9\" lang=\"en\"><![endif]--><!--[if !(IE)]><!--><html class=\"no-js\" lang=\"en\"><!--<![endif]-->",
 			"markdownRenderer": "src/markdown/renderer.js"
 		}
+	},
+	"devDependencies": {
+		"@gold.au/pancake": "^1.2.1",
+		"@gold.au/pancake-js": "^1.2.2",
+		"@gold.au/pancake-sass": "^2.3.7"
 	},
 	"pancake": {
 		"auto-save": false,
