udpate furnace link

--- a/content/_data.yml
+++ b/content/_data.yml
@@ -10,38 +10,38 @@ pancake:
     '@gold.au/pancake-react': 38
     '@gold.au/pancake-sass': 56
     '@gold.au/syrup': 29
-  stars: 94
+  stars: 2
 auds:
-  downloads: 276988
+  downloads: 1532
   modules:
-    '@gov.au/accordion': 9094
-    '@gov.au/animate': 12445
-    '@gov.au/body': 11807
-    '@gov.au/breadcrumbs': 9550
-    '@gov.au/buttons': 11773
-    '@gov.au/callout': 8637
-    '@gov.au/card': 10600
-    '@gov.au/control-input': 11194
-    '@gov.au/core': 17144
-    '@gov.au/cta-link': 10176
-    '@gov.au/direction-links': 8249
-    '@gov.au/footer': 10875
-    '@gov.au/form': 7192
-    '@gov.au/grid-12': 8808
-    '@gov.au/header': 10429
-    '@gov.au/headings': 8084
-    '@gov.au/inpage-nav': 7443
-    '@gov.au/keyword-list': 6876
-    '@gov.au/link-list': 11264
-    '@gov.au/main-nav': 8451
-    '@gov.au/page-alerts': 9471
-    '@gov.au/progress-indicator': 6965
-    '@gov.au/responsive-media': 7484
-    '@gov.au/searchbox': 5117
-    '@gov.au/select': 8679
-    '@gov.au/side-nav': 7045
-    '@gov.au/skip-link': 7907
-    '@gov.au/table': 5600
-    '@gov.au/tags': 7221
-    '@gov.au/text-inputs': 11408
-  stars: 729
+    '@gold.au/accordion': 48
+    '@gold.au/animate': 55
+    '@gold.au/body': 53
+    '@gold.au/breadcrumbs': 48
+    '@gold.au/buttons': 52
+    '@gold.au/callout': 49
+    '@gold.au/card': 48
+    '@gold.au/control-input': 50
+    '@gold.au/core': 117
+    '@gold.au/cta-link': 48
+    '@gold.au/direction-links': 47
+    '@gold.au/footer': 48
+    '@gold.au/form': 49
+    '@gold.au/grid-12': 47
+    '@gold.au/header': 47
+    '@gold.au/headings': 46
+    '@gold.au/inpage-nav': 47
+    '@gold.au/keyword-list': 49
+    '@gold.au/link-list': 54
+    '@gold.au/main-nav': 49
+    '@gold.au/page-alerts': 47
+    '@gold.au/progress-indicator': 47
+    '@gold.au/responsive-media': 48
+    '@gold.au/searchbox': 49
+    '@gold.au/select': 47
+    '@gold.au/side-nav': 48
+    '@gold.au/skip-link': 47
+    '@gold.au/table': 47
+    '@gold.au/tags': 48
+    '@gold.au/text-inputs': 53
+  stars: 0
