--- a/content/_data.yml
+++ b/content/_data.yml
@@ -2,46 +2,46 @@
 # THE `pancake` and `auds` FIELDS WILL BE OVERWRITTEN
 
 pancake:
-  downloads: 82963
+  downloads: 262
   modules:
-    '@gov.au/pancake': 20622
-    '@gov.au/pancake-js': 12624
-    '@gov.au/pancake-json': 17496
-    '@gov.au/pancake-react': 13950
-    '@gov.au/pancake-sass': 17551
-    '@gov.au/syrup': 720
-  stars: 94
+    '@gold.au/pancake': 60
+    '@gold.au/pancake-js': 20
+    '@gold.au/pancake-json': 59
+    '@gold.au/pancake-react': 38
+    '@gold.au/pancake-sass': 56
+    '@gold.au/syrup': 29
+  stars: 2
 auds:
-  downloads: 270537
+  downloads: 1532
   modules:
-    '@gold.au/accordion': 8857
-    '@gold.au/animate': 12652
-    '@gold.au/body': 11678
-    '@gold.au/breadcrumbs': 9232
-    '@gold.au/buttons': 11461
-    '@gold.au/callout': 8504
-    '@gold.au/card': 10227
-    '@gold.au/control-input': 10873
-    '@gold.au/core': 16735
-    '@gold.au/cta-link': 9991
-    '@gold.au/direction-links': 8052
-    '@gold.au/footer': 10702
-    '@gold.au/form': 6876
-    '@gold.au/grid-12': 8659
-    '@gold.au/header': 10169
-    '@gold.au/headings': 7885
-    '@gold.au/inpage-nav': 7111
-    '@gold.au/keyword-list': 6569
-    '@gold.au/link-list': 11111
-    '@gold.au/main-nav': 8142
-    '@gold.au/page-alerts': 9378
-    '@gold.au/progress-indicator': 6814
-    '@gold.au/responsive-media': 7309
-    '@gold.au/searchbox': 5027
-    '@gold.au/select': 8546
-    '@gold.au/side-nav': 6799
-    '@gold.au/skip-link': 7651
-    '@gold.au/table': 5484
-    '@gold.au/tags': 6939
-    '@gold.au/text-inputs': 11104
-  stars: 727
+    '@gold.au/accordion': 48
+    '@gold.au/animate': 55
+    '@gold.au/body': 53
+    '@gold.au/breadcrumbs': 48
+    '@gold.au/buttons': 52
+    '@gold.au/callout': 49
+    '@gold.au/card': 48
+    '@gold.au/control-input': 50
+    '@gold.au/core': 117
+    '@gold.au/cta-link': 48
+    '@gold.au/direction-links': 47
+    '@gold.au/footer': 48
+    '@gold.au/form': 49
+    '@gold.au/grid-12': 47
+    '@gold.au/header': 47
+    '@gold.au/headings': 46
+    '@gold.au/inpage-nav': 47
+    '@gold.au/keyword-list': 49
+    '@gold.au/link-list': 54
+    '@gold.au/main-nav': 49
+    '@gold.au/page-alerts': 47
+    '@gold.au/progress-indicator': 47
+    '@gold.au/responsive-media': 48
+    '@gold.au/searchbox': 49
+    '@gold.au/select': 47
+    '@gold.au/side-nav': 48
+    '@gold.au/skip-link': 47
+    '@gold.au/table': 47
+    '@gold.au/tags': 48
+    '@gold.au/text-inputs': 53
+  stars: 0
