fixed the build

--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
 		"build:sass": "mkdirp src/assets/css/ && node-sass src/sass --output-style compressed --output src/assets/css",
 		"build:sass:dev": "mkdirp src/assets/css/ && node-sass src/sass --output-style compact --source-map true --output src/assets/css/",
 		"build:css": "npm run build:sass && npm run build:autoprefix",
-		"build:js-a11y": "concat-files-cli -i src/js/a11y/* -o src/assets/js/a11y.js",
-		"build:js-header": "concat-files-cli -i src/js/header/* -o src/assets/js/header.js",
-		"build:js-footer": "concat-files-cli -i src/js/footer/* -o src/assets/js/footer.js",
+		"build:js-a11y": "concat-files-cli -i 'src/js/a11y/*' -o src/assets/js/a11y.js",
+		"build:js-header": "concat-files-cli -i 'src/js/header/*' -o src/assets/js/header.js",
+		"build:js-footer": "concat-files-cli -i 'src/js/footer/*' -o src/assets/js/footer.js",
 		"build:uglify": "uglifyjs src/assets/js/header.js --compress --output src/assets/js/header.js && uglifyjs src/assets/js/footer.js --compress --output src/assets/js/footer.js",
 		"build:js": "mkdirp src/assets/js/ && npm run build:js-a11y && npm run build:js-header && npm run build:js-footer && npm run build:uglify",
 		"build:assets": "npm run build:css && npm run build:js",
