Make the custom 404 page work on github pages

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"docs": "cuttlebelle docs",
 		"prebuild:pancake": "pancake",
 		"prebuild": "npm run prebuild:pancake && node src/helper/helper.js components",
-		"build:site": "cuttlebelle",
+		"build:site": "cuttlebelle && npm run build:ghp-404",
+		"build:ghp-404": "cp site/404/index.html site/404.html",
 		"build:autoprefix": "postcss src/assets/css/*.css --use autoprefixer --replace",
 		"build:sass": "mkdirp src/assets/css/ && node-sass src/sass --output-style compressed --output src/assets/css",
 		"build:sass:dev": "mkdirp src/assets/css/ && node-sass src/sass --output-style compact --source-map true --output src/assets/css/",
