--- a/package.json
+++ b/package.json
@@ -23,10 +23,7 @@
 		"watch:sass": "onchange 'src/sass/**/*.scss' -- npm run build:sass:dev && npm run build:autoprefix",
 		"watch:js": "onchange 'src/js/**/*.js' -- npm run build:js",
 		"watch:site": "cuttlebelle -w -n",
-		"watch": "npm run build && npm run watch:sass | npm run watch:js | npm run watch:site",
-		"start:local": "node server/index.js local",
-		"start:staging": "node server/index.js staging",
-		"start": "node server/index.js"
+		"watch": "npm run build && npm run watch:sass | npm run watch:js | npm run watch:site"
 	},
 	"repository": {
 		"type": "git",
