Search on the frontend (#13)

--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
 		"watch:js": "onchange 'src/js/**/*.js' -- npm run build:js",
 		"watch:site": "cuttlebelle -w -n",
 		"watch": "npm run build && npm run watch:sass | npm run watch:js | npm run watch:site",
-		"start:local": "node server/index.js local",
-		"start:staging": "node server/index.js staging",
-		"start": "node server/index.js"
+		"clean": "git clean -xdf"
 	},
 	"repository": {
 		"type": "git",
@@ -75,7 +73,6 @@
 		"concat-cli": "^4.0.0",
 		"concat-files-cli": "^0.1.6",
 		"cuttlebelle": "^1.0.0-alpha.75",
-		"express": "^4.17.1",
 		"mkdirp": "^0.5.1",
 		"node-fetch": "^2.6.1",
 		"node-sass": "^4.14.1",
